--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       rel="stylesheet"
     />
     <link href="./css/main.min.css" rel="stylesheet" />
+    <link rel="preconnect" href="./css/modern-normalize.css" />
     
   </head>
   <body>
