--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         </ul>
       </section>
       <section class="job__container">
-        <h2 class="container__heading">Czym się zajmujemy</h2>
+        <h2 class="job__heading">Czym się zajmujemy</h2>
         <section class="job__section">
         <div class="job__img">
           <ul class="job__list">
@@ -523,7 +523,7 @@
         </div>
       </section>
       <section class="client__container">
-        <h3 class="container__heading">Nasi Klienci</h3>
+        <h3 class="client__heading">Nasi Klienci</h3>
         <ul class="client__list">
           <li class="client__item">
             <a class="client__link">
@@ -643,7 +643,7 @@
           <p class="footer__heading footer__heading--newsletter">Zapisz się do newslettera</p>
           <form>
             <div class="newsletter__container">
-            <input class="footer__newsletter" type="email" name="email" placeholder="E-mail"required>
+            <input class="footer__form-newsletter" type="email" name="email" placeholder="E-mail"required>
     <button class="form__button form__button--signup" type="submit">
       Zapisz się
       <svg class="icon__send" height="24" width="24">
